--- a/README
+++ b/README
@@ -17,12 +17,7 @@ NB. perche il server non crashi quando fa save o apre gump bisogna:
 		scaricare la libreria zlib32.dll (ora gia presente nel repo) e affiancarla all'eseguibile del server
 		
 	LINUX:
-		nano /etc/mono/config   
-		
-		aggiungere le seguenti righe al file di configurazione:
-			<dllmap dll="libz.so" target="libz.so.1" />
-			<dllmap dll="zlib32" target="libz.so" os="!windows" />
-			<dllmap dll="zlib32.dll" target="libz.so" os="!windows" />
+		cercare la libreria libz.so.1 e linkarla come segue
 		
 		sudo ln -s /usr/lib/libz.so.1 /usr/lib/libz.so
 	
