--- a/README
+++ b/README
@@ -15,12 +15,12 @@ Compilare il server:
 NB. perche il server non crashi quando fa save o apre gump bisogna:
 	WINDOWS:
 		scaricare la libreria zlib32.dll (ora gia presente nel repo) e affiancarla all'eseguibile del server
+		cancellare in locale il file RunUO.exe.config
 		
 	LINUX:
 		cercare la libreria libz.so.1 e linkarla come segue
 		
-		sudo ln -s /usr/lib/libz.so.1 /usr/lib/libz.so
+		sudo ln -s /usr/lib/libz.so.1 /usr/lib/libz.so	
 		
-		rinominare RunUO.exe.config.bak in RunUO.exe.config
 	
 
