--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ Guardie
 
     * Skill e stat bilanciate.
 	* Gestire problema della mancanza di spawn point (ora vanno a 0,0 invece devono distruggersi)
+	* Sistemare AI e FightMode di Paladin, Mage e Archer
 
 	
 Spells
