* Scripts/Engines/AI/AI/BaseAI.cs: Se le guardie non hanno uno spawn point vengono eliminate quando lasciano la guarded region

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
 Guardie
 
     * Skill e stat bilanciate.
-	* Gestire problema della mancanza di spawn point (ora vanno a 0,0 invece devono distruggersi)
-	* Sistemare AI e FightMode di Paladin, Mage e Archer
+	* Sistemare AI Paladin
 
 
 Spells
